# 2d-perceptron-illustration

./: README.md  algorithm.py  grid.py  main.py  pyproject.toml  settings.py  ui.py
src/: grid.py
